--- a/SyntacticProcessing.ipynb
+++ b/SyntacticProcessing.ipynb
@@ -554,14 +554,16 @@
         "    ]\n",
         "\n",
         "    if pos > 0:\n",
+        "        # Track the previous word\n",
         "        prev_word = sentence_list[pos-1]\n",
-        "        features.append('prev_word.lower='+prev_word.lower()\n",
-        "                        )   # Track the previous word\n",
+        "        features.append('prev_word.lower='+prev_word.lower())\n",
         "    else:\n",
-        "        features.append('BEG')  # Track beginning of sentence\n",
+        "        # Track beginning of sentence\n",
+        "        features.append('BEG')\n",
         "\n",
         "    if pos == len(sentence_list)-1:\n",
-        "        features.append('END')  # Track ending of sentence\n",
+        "        # Track ending of sentence\n",
+        "        features.append('END')\n",
         "\n",
         "    return features"
       ]
