--- a/SyntacticProcessing.ipynb
+++ b/SyntacticProcessing.ipynb
@@ -753,7 +753,7 @@
         "id": "qIneYrqZOUiJ"
       },
       "source": [
-        "Calculate the f1 score using the actual labels and the predicted labels of the test dataset."
+        "Calculate the F1 score using the actual labels and the predicted labels of the test dataset."
       ]
     },
     {
